--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "kixonair",
-  "version": "1.4.0",
+  "version": "16.0.0",
   "type": "module",
+  "private": true,
   "scripts": { "start": "node server.js" },
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "node-fetch": "^3.3.2"
   }
