--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "kixonair",
-  "version": "16.0.0",
-  "type": "module",
+  "version": "1.0.0",
   "private": true,
-  "scripts": { "start": "node server.js" },
+  "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "dotenv": "^16.4.5"
   }
 }
