--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "kixonair",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "dotenv": "^16.0.3",
+    "node-fetch": "^3.3.2"
   }
 }
