--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "kixonair",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "dotenv": "^16.0.3",
-    "node-fetch": "^3.3.2"
+    "dotenv": "^16.0.3"
   }
 }
