--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "kixonair",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "private": true,
   "type": "module",
-  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^16.0.3"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2",
+    "dotenv": "^16.4.5"
   }
 }
