--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
-
 {
   "name": "kixonair",
   "version": "1.0.0",
   "type": "module",
   "engines": { "node": ">=18" },
-  "scripts": {
-    "start": "node server.js"
-  },
+  "scripts": { "start": "node server.js" },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
